[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4.4.0"
actix-web-actors = "4.0.0"
pathfinding = "4.3.2"
hashbrown = { version = "0.14.0", features = ["serde"] }
kdtree = "0.7.0"
log = "0.4.20"
nanoid = "0.4.0"
rayon = "1.8.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
specs = { version = "0.20.0", features = ["specs-derive", "serde"] }
voxelize = "0.8.55"

[profile.release]
opt-level = 3
